added work samples to portfolio:

--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,7 @@ header ul li a:active {
   margin: 300px 450px 0;
 }
 
-.samples {
+.examples {
   width: 100%;
   margin: 0 auto;
   display: flex;
